доработка и рефакторинг логики работы бота и новые вопросы по Java